Fix: Change overflow to 'auto'

--- a/src/global.css
+++ b/src/global.css
@@ -279,7 +279,7 @@ input {
 .overflow {
 	height: initial;
 	box-sizing: border-box;
-	overflow-y: hidden;
+	overflow-y: auto;
 	clip-path: fill-box;
 }
 
